@@ -1,10 +1,37 @@
+.gitignore
 Changes
+lib/Text/Table.pm
 LICENSE
+Makefile.PL
 MANIFEST
 MANIFEST.SKIP
-Makefile.PL
+META.yml
 README
-lib/Text/Table.pm
 t/01_ini.t
 t/10_Table.t
 t/11_Variable_Rule.t
+t/pod-coverage.t
+t/pod.t
+Text-Table-1.116/blib/arch/.exists
+Text-Table-1.116/blib/arch/auto/Text/Table/.exists
+Text-Table-1.116/blib/bin/.exists
+Text-Table-1.116/blib/lib/auto/Text/Table/.exists
+Text-Table-1.116/blib/lib/Text/.exists
+Text-Table-1.116/blib/lib/Text/Table.pm
+Text-Table-1.116/blib/man1/.exists
+Text-Table-1.116/blib/man3/.exists
+Text-Table-1.116/blib/man3/Text::Table.3pm
+Text-Table-1.116/blib/script/.exists
+Text-Table-1.116/Changes
+Text-Table-1.116/lib/Text/Table.pm
+Text-Table-1.116/LICENSE
+Text-Table-1.116/Makefile
+Text-Table-1.116/Makefile.PL
+Text-Table-1.116/MANIFEST
+Text-Table-1.116/MANIFEST.SKIP
+Text-Table-1.116/META.yml
+Text-Table-1.116/pm_to_blib
+Text-Table-1.116/README
+Text-Table-1.116/t/01_ini.t
+Text-Table-1.116/t/10_Table.t
+Text-Table-1.116/t/11_Variable_Rule.t
